Initialized React app and published to Github Pages
+ Added favicon

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "options-visualizer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://zmoustafa.github.io/options-visualizer",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -11,6 +12,9 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build",
+    "clean": "gh-pages-clean",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -30,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
