--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-bootstrap": "^1.3.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "^7.2.1",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "predeploy": "npm run build",
